containers/kubernetes/samples/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/component: debug
    app.kubernetes.io/part-of: debug
    app.kubernetes.io/managed-by: manual
spec:
  securityContext:
    runAsUser: 20000
    runAsGroup: 20000
    fsGroup: 20000
    runAsNonRoot: true
  serviceAccountName: zowe-sa
  volumes:
    - name: tmp
      emptyDir: {}
    - name: zowe-runtime
      emptyDir: {}
    - name: zowe-config
      configMap:
        name: zowe-config
    - name: zowe-keystore
      projected:
        sources:
          - secret:
              name: zowe-certificates-secret
    - name: zowe-logs
      emptyDir: {}
    - name: zowe-workspace
      persistentVolumeClaim:
        claimName: zowe-workspace-pvc
  containers:
    - name: debug
      image: zowe-docker-snapshot.jfrog.io/ompzowe/zowe-launch-scripts:2.1.0-ubuntu.v2-x-staging
      imagePullPolicy: Always
      resources:
        requests:
          memory: "64Mi"
          cpu: "10m"
        limits:
          memory: "128Mi"
          cpu: "100m"
      securityContext:
        readOnlyRootFilesystem: true
        allowPrivilegeEscalation: false
        privileged: false
        runAsNonRoot: true
        capabilities:
          drop:
            - all
      volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: zowe-runtime
          mountPath: "/home/zowe/runtime"
        - name: zowe-config
          mountPath: "/home/zowe/instance/zowe.yaml"
          subPath: zowe.yaml
          readOnly: true
        - name: zowe-keystore
          mountPath: "/home/zowe/keystore"
          readOnly: true
        - name: zowe-logs
          mountPath: "/home/zowe/instance/logs"
        - name: zowe-workspace
          mountPath: "/home/zowe/instance/workspace"
      command: ["/bin/bash", "-c"]
      args:
        - sleep 3600
