containers/kubernetes/samples/sample-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <my-component-name>
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    # app.kubernetes.io/version:
    app.kubernetes.io/component: <my-component-name>
    # app.kubernetes.io/part-of:
    app.kubernetes.io/managed-by: manual
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zowe
      app.kubernetes.io/instance: zowe
      app.kubernetes.io/component: <my-component-name>
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zowe
        app.kubernetes.io/instance: zowe
        app.kubernetes.io/component: <my-component-name>
    spec:
      securityContext:
        runAsUser: 20000
        runAsGroup: 20000
        fsGroup: 20000
      serviceAccountName: zowe-sa
      volumes:
        - name: zowe-runtime
          emptyDir: {}
        - name: zowe-instance
          emptyDir: {}
        - name: zowe-config
          configMap:
            name: zowe-config
        - name: zowe-keystore
          projected:
            sources:
              - configMap:
                  name: zowe-certificates-cm
              - secret:
                  name: zowe-certificates-secret
        - name: zowe-workspace
          persistentVolumeClaim:
            claimName: zowe-workspace-pvc
      containers:
        - name: <my-component-name>
          image: <my-component-image>
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - name: <my-component-port-name>
              containerPort: <my-component-port>
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: <my-component-port>
            # this should give 18 * periodSeconds(default to 10) seconds about 3 minutes to confirm it's ready
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            tcpSocket:
              port: <my-component-port>
            # this should give 3 * periodSeconds(default to 10) seconds about 30 seconds to confirm it's offline
            periodSeconds: 10
            failureThreshold: 3
          command: ["/bin/bash", "-c"]
          args:
            - "/home/zowe/runtime/bin/zwe internal start -c /home/zowe/zowe.yaml"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "/home/zowe/runtime/bin/internal/container-prestop.sh"]
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
          volumeMounts:
            - name: zowe-runtime
              mountPath: "/home/zowe/runtime"
            - name: zowe-instance
              mountPath: "/home/zowe/instance"
            - name: zowe-config
              mountPath: "/home/zowe/instance/instance.env"
              subPath: instance.env
              readOnly: true
            - name: zowe-keystore
              mountPath: "/home/zowe/keystore"
              readOnly: true
            - name: zowe-workspace
              mountPath: "/home/zowe/instance/workspace"
