containers/kubernetes/samples/update-workspace-permission-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: update-workspace-permission
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/component: update-workspace-permission
    app.kubernetes.io/part-of: debug
    app.kubernetes.io/managed-by: manual
spec:
  restartPolicy: Never
  securityContext:
    fsGroup: 20000
  serviceAccountName: zowe-sa
  volumes:
    - name: zowe-workspace
      persistentVolumeClaim:
        claimName: zowe-workspace-pvc
  containers:
    - name: update-workspace-permission
      image: zowe-docker-snapshot.jfrog.io/ompzowe/zowe-launch-scripts:3.0.0-ubuntu.v3-x-staging
      imagePullPolicy: Always
      resources:
        requests:
          memory: "64Mi"
          cpu: "10m"
        limits:
          memory: "128Mi"
          cpu: "100m"
      securityContext:
        readOnlyRootFilesystem: true
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - all
          add:
            - CHOWN
        runAsUser: 0
        runAsGroup: 0
      volumeMounts:
        - name: zowe-workspace
          mountPath: "/home/zowe/instance/workspace"
      command: ["/bin/sh", "-c"]
      args:
        - OWNER=`stat -c "%u:%g" /home/zowe/instance/workspace` && PERMISSION=`stat -c "%a" /home/zowe/instance/workspace` && echo "Zowe workspace owner is ${OWNER} with ${PERMISSION} permission" && if [ "${OWNER}" != "20000:20000" ]; then (chown -R 20000:20000 /home/zowe/instance/workspace || exit $?) && OWNER=`stat -c "%u:%g" /home/zowe/instance/workspace` && PERMISSION=`stat -c "%a" /home/zowe/instance/workspace` && echo "Zowe workspace owner is ${OWNER} with ${PERMISSION} permission after ch [...]
