containers/kubernetes/samples/api-catalog-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-catalog-service
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/component: api-catalog
    app.kubernetes.io/part-of: apiml
    app.kubernetes.io/managed-by: manual
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/component: api-catalog
  ports:
    - name: api-catalog
      protocol: TCP
      port: 7552
      targetPort: apicatalog-port
      appProtocol: https
