containers/kubernetes/samples/gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: 1.24.0
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: apiml
    app.kubernetes.io/managed-by: manual
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/component: gateway
  ports:
    - protocol: TCP
      port: 7554
      # nodePort: 32554
      targetPort: gateway-port
      appProtocol: https
