containers/kubernetes/samples/discovery-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: discovery
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: 1.24.0
    app.kubernetes.io/component: discovery
    app.kubernetes.io/part-of: apiml
    app.kubernetes.io/managed-by: manual
spec:
  to:
    kind: Service
    name: discovery-service
  port:
    targetPort: 7553
  wildcardPolicy: None
