containers/kubernetes/samples/discovery-service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: 1.24.0
    app.kubernetes.io/component: discovery
    app.kubernetes.io/part-of: apiml
    app.kubernetes.io/managed-by: manual
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/component: discovery
  ports:
    - name: discovery-port
      protocol: TCP
      port: 7553
      appProtocol: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: 1.24.0
    app.kubernetes.io/component: discovery
    app.kubernetes.io/part-of: apiml
    app.kubernetes.io/managed-by: manual
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: discovery-service
              port:
                number: 7553
